--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,8 +7,23 @@
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+    <ion-card>
+  <ion-row>
+    
+      <ion-col size="6">
+
+        <img  src="http://lorempixel.com/400/200">
+
+      </ion-col>
+
+      <ion-col size="6">
+
+        <ion-card-content>
+         <h5 id="text"> Keep close to Nature's heart... and break clear away, once in awhile,
+          and climb a mountain or spend a week in the woods. Wash your spirit clean.</h5>
+        </ion-card-content>
+    
+    </ion-col>
+  </ion-row>
+</ion-card>
 </ion-content>
